Expose admin config modals to global scope

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2713,6 +2713,8 @@ tabs.forEach(function (btn) {
           if (!publicFormsConfigModalBackdrop) return;
           publicFormsConfigModalBackdrop.style.display = 'none';
         }
+        window.openPublicFormsConfigModal = openPublicFormsConfigModal;
+        window.closePublicFormsConfigModal = closePublicFormsConfigModal;
 
         function setPublicFormsConfigStatus(message, isError) {
           if (!publicFormsConfigStatus) return;
@@ -2859,6 +2861,8 @@ tabs.forEach(function (btn) {
           if (!notificationsConfigModalBackdrop) return;
           notificationsConfigModalBackdrop.style.display = 'none';
         }
+        window.openNotificationsConfigModal = openNotificationsConfigModal;
+        window.closeNotificationsConfigModal = closeNotificationsConfigModal;
 
         function setNotificationsConfigStatus(message, isError) {
           if (!notificationsConfigStatus) return;
@@ -2950,7 +2954,8 @@ tabs.forEach(function (btn) {
         }
 
         if (openNotificationsConfigBtn) {
-          openNotificationsConfigBtn.addEventListener('click', function () {
+          openNotificationsConfigBtn.addEventListener('click', function (event) {
+            event.preventDefault();
             openNotificationsConfigModal();
           });
         }
@@ -2966,7 +2971,8 @@ tabs.forEach(function (btn) {
         }
 
         if (openPublicFormsConfigBtn) {
-          openPublicFormsConfigBtn.addEventListener('click', function () {
+          openPublicFormsConfigBtn.addEventListener('click', function (event) {
+            event.preventDefault();
             openPublicFormsConfigModal();
           });
         }
